--- a/src/main/resources/com/datagenerator/talend/components/source/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/source/Messages.properties
@@ -3,3 +3,7 @@
 DataGenerator.DataGeneratorInput._displayName=DataGeneratorInput
 DataGeneratorInputMapperConfiguration.dataset._displayName=dataset
 DataGeneratorInputMapperConfiguration.repeat._displayName=repeat
+DataGeneratorInputConfiguration.dataset._displayName = Dataset
+DataGeneratorInputConfiguration.delay._displayName = Delay
+DataGeneratorInputConfiguration.pseudoStreaming._displayName = Pseudo Streaming
+DataGeneratorInputConfiguration.subset._displayName = Subset
