--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -38,41 +38,13 @@ Types.COMPANYNAME._displayName=Company Name
 Types.COMPANYEMAIL._displayName=Company Email
 Types.COMPANYURL._displayName=Company URL
 Types.COMPANYVAT._displayName=Company VAT
-
-
-TimeZones.ACT._displayName=ACT
-TimeZones.AET._displayName=AET
-TimeZones.AGT._displayName=AGT
-TimeZones.AR._displayName=AR
-TimeZones.AST._displayName=AST
-TimeZones.BET._displayName=BET
-TimeZones.BST._displayName=BST
-TimeZones.CAT._displayName=CAT
-TimeZones.CNT._displayName=CNT
-TimeZones.CST._displayName=CST
-TimeZones.CTT._displayName=CTT
-TimeZones.EAT._displayName=EAT
-TimeZones.ECT._displayName=ECT
-TimeZones.EET._displayName=EET
-TimeZones.EST._displayName=EST
-TimeZones.GMT._displayName=GMT
-TimeZones.HST._displayName=HST
-TimeZones.IET._displayName=IET
-TimeZones.IST._displayName=IST
-TimeZones.JST._displayName=JST
-TimeZones.MET._displayName=MET
-TimeZones.MIT._displayName=MIT
-TimeZones.MST._displayName=MST
-TimeZones.NET._displayName=NET
-TimeZones.NST._displayName=NST
-TimeZones.PLT._displayName=PLT
-TimeZones.PNT._displayName=PNT
-TimeZones.PRT._displayName=PRT
-TimeZones.PST._displayName=PST
-TimeZones.SST._displayName=SST
-TimeZones.UTC._displayName=UTC
-TimeZones.VST._displayName=VST
-
+Types.BEER._displayName=Beer
+Types.BEERSTYLE._displayName=Beer Style
+Types.BOOKAUTHOR._displayName=Book Author
+Types.BOOKGENRE._displayName=Book Genre
+Types.BOOKPUBLISHER._displayName=Book Publisher
+Types.BOOKTITLE._displayName=Book Title
+Types.MARITALSTATUS._displayName=Marital Status
 
 
 
