Add new fun functions

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -1,15 +1,15 @@
 # Here you can change all your configuration display names to use more explicit labels
 # You can also translate your configuration by adding one file by local Messages_fr.properties for french for example
-DataGeneratorDataset.datastore._displayName = datastore
+DataGeneratorDataset.datastore._displayName = Connection
 DataGeneratorDataset.fields._displayName = Fields
 DataGenerator.actions.suggestions.FIELDS._displayName = FIELDS
 DataGenerator.actions.suggestions.TYPES._displayName = TYPES
-DataGenerator.actions.suggestions.ZONEID_CHOICES._displayName=Time Zones
-DataGeneratorInputConfiguration.dataset._displayName = dataset
 DataGeneratorDataset.rows._displayName = Rows
 FieldConfiguration.name._displayName = Name
 FieldConfiguration.type._displayName = Type
 FieldConfiguration.regex._displayName = From Regex
+FieldConfiguration.regex._placeholder  = dataset
+
 FieldConfiguration.length._displayName = Length
 DataGeneratorDataset.locales._displayName = Locales
 DataGeneratorDataset.customLocale._displayName = Custom Locales
@@ -23,3 +23,4 @@ DataGeneratorDataset.customSeed._displayName = Custom Seed
 DataGeneratorDataset.seed._displayName = Seed
 
 
+DataGeneratorInputConfiguration.dataset._displayName = dataset
