--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -45,6 +45,10 @@ Types.BOOKGENRE._displayName=Book Genre
 Types.BOOKPUBLISHER._displayName=Book Publisher
 Types.BOOKTITLE._displayName=Book Title
 Types.MARITALSTATUS._displayName=Marital Status
-
+Types.APPNAME._displayName=App Name
+Types.APPVERSION._displayName=App Version
+Types.TEMPERATURECELSIUS._displayName=Temperature °C
+Types.TEMPERATUREFAHRENHEIT._displayName=Temperature °F
+Types.WEATHER._displayName=Weather
 
 
