Fix missing displayNames

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -9,6 +9,7 @@ FieldConfiguration.name._displayName = Name
 FieldConfiguration.type._displayName = Type
 FieldConfiguration.regex._displayName = From Regex
 FieldConfiguration.regex._placeholder  = dataset
+FieldConfiguration.code._displayName = Code
 
 FieldConfiguration.length._displayName = Length
 DataGeneratorDataset.locales._displayName = Locales
@@ -21,6 +22,5 @@ FieldConfiguration.startTime._displayName = From
 FieldConfiguration.increment._displayName = Increment
 DataGeneratorDataset.customSeed._displayName = Custom Seed
 DataGeneratorDataset.seed._displayName = Seed
-
 
 DataGeneratorInputConfiguration.dataset._displayName = dataset
