--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -50,5 +50,14 @@ Types.APPVERSION._displayName=App Version
 Types.TEMPERATURECELSIUS._displayName=Temperature °C
 Types.TEMPERATUREFAHRENHEIT._displayName=Temperature °F
 Types.WEATHER._displayName=Weather
+Types.ANIMAL._displayName=Animal
+Types.STANDARDCODE._displayName=Standard Codes
 
-
+Codes.ASIN._displayName=ASIN
+Codes.EAN13._displayName=EAN13
+Codes.EAN8._displayName=EAN8
+Codes.GTIN13._displayName=GTIN13
+Codes.GTIN8._displayName=GTIN8
+Codes.IMEI._displayName=IMEI
+Codes.ISBN10._displayName=ISBN10
+Codes.ISBN13._displayName=ISBN13
