Minor fixes + logging

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -8,9 +8,8 @@ DataGeneratorDataset.rows._displayName = Rows
 FieldConfiguration.name._displayName = Name
 FieldConfiguration.type._displayName = Type
 FieldConfiguration.regex._displayName = From Regex
-FieldConfiguration.regex._placeholder  = dataset
+FieldConfiguration.regex._placeholder  = Write a regex pattern to generate data
 FieldConfiguration.code._displayName = Code
-
 FieldConfiguration.length._displayName = Length
 DataGeneratorDataset.locales._displayName = Locales
 DataGeneratorDataset.customLocale._displayName = Custom Locales
@@ -22,5 +21,4 @@ FieldConfiguration.startTime._displayName = From
 FieldConfiguration.increment._displayName = Increment
 DataGeneratorDataset.customSeed._displayName = Custom Seed
 DataGeneratorDataset.seed._displayName = Seed
-
 DataGeneratorInputConfiguration.dataset._displayName = dataset
