Add new functions

--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -52,6 +52,12 @@ Types.TEMPERATUREFAHRENHEIT._displayName=Temperature °F
 Types.WEATHER._displayName=Weather
 Types.ANIMAL._displayName=Animal
 Types.STANDARDCODE._displayName=Standard Codes
+Types.AIRCRAFT._displayName=Aircraft
+Types.AIRPORT._displayName=Airport
+Types.COLORHEX._displayName=Color Hexadecimal
+Types.COLORNAME._displayName=Color Name
+Types.FILEEXTENSION._displayName=File Extension
+Types.FILENAME._displayName=File Name
 
 Codes.ASIN._displayName=ASIN
 Codes.EAN13._displayName=EAN13
