Add free text field

--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -58,12 +58,13 @@ Types.COLORHEX._displayName=Color Hexadecimal
 Types.COLORNAME._displayName=Color Name
 Types.FILEEXTENSION._displayName=File Extension
 Types.FILENAME._displayName=File Name
+Types.ASIN._displayName=ASIN Code
+Types.EAN13._displayName=EAN13 Code
+Types.EAN8._displayName=EAN8 Code
+Types.GTIN13._displayName=GTIN13 Code
+Types.GTIN8._displayName=GTIN8 Code
+Types.IMEI._displayName=IMEI Code
+Types.ISBN10._displayName=ISBN10 Code
+Types.ISBN13._displayName=ISBN13 Code
+Types.FREETEXT._displayName=Free Text
 
-Codes.ASIN._displayName=ASIN
-Codes.EAN13._displayName=EAN13
-Codes.EAN8._displayName=EAN8
-Codes.GTIN13._displayName=GTIN13
-Codes.GTIN8._displayName=GTIN8
-Codes.IMEI._displayName=IMEI
-Codes.ISBN10._displayName=ISBN10
-Codes.ISBN13._displayName=ISBN13
