Fix missing display name

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -19,6 +19,7 @@ DataGeneratorDataset.zoneid._displayName = Date Zone
 FieldConfiguration.endTime._displayName = To
 FieldConfiguration.startTime._displayName = From
 FieldConfiguration.increment._displayName = Increment
+FieldConfiguration.freetext._displayName = Free text
 DataGeneratorDataset.customSeed._displayName = Custom Seed
 DataGeneratorDataset.seed._displayName = Seed
-DataGeneratorInputConfiguration.dataset._displayName = dataset
+DataGeneratorInputConfiguration.dataset._displayName = Dataset
