--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -6,9 +6,11 @@ DataGenerator.actions.suggestions.FIELDS._displayName = FIELDS
 DataGenerator.actions.suggestions.TYPES._displayName = TYPES
 DataGeneratorDataset.rows._displayName = Rows
 FieldConfiguration.name._displayName = Name
+FieldConfiguration.name._placeHolder = Name given to the field
 FieldConfiguration.type._displayName = Type
+FieldConfiguration.type._placeHolder = Select a field type
 FieldConfiguration.regex._displayName = From Regex
-FieldConfiguration.regex._placeholder  = Write a regex pattern to generate data
+FieldConfiguration.regex._placeholder  = Regex pattern to generate data
 FieldConfiguration.code._displayName = Code
 FieldConfiguration.length._displayName = Length
 DataGeneratorDataset.locales._displayName = Locales
