Fix passport generator

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -1,6 +1,6 @@
 # Here you can change all your configuration display names to use more explicit labels
 # You can also translate your configuration by adding one file by local Messages_fr.properties for french for example
-DataGeneratorDataset.datastore._displayName = Connection
+DataGeneratorDataset.datastore._displayName =
 DataGeneratorDataset.fields._displayName = Fields
 DataGenerator.actions.suggestions.FIELDS._displayName = FIELDS
 DataGenerator.actions.suggestions.TYPES._displayName = TYPES
