Update with latest version

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -25,3 +25,7 @@ FieldConfiguration.freetext._displayName = Free text
 DataGeneratorDataset.customSeed._displayName = Custom Seed
 DataGeneratorDataset.seed._displayName = Seed
 DataGeneratorInputConfiguration.dataset._displayName = Dataset
+DataGeneratorDataset.zone._displayName = Time Zone
+ListConfiguration.item._displayName = Element
+ListConfiguration.weight._displayName = Weight
+FieldConfiguration.randomwithinlist._displayName = Elements
