--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -67,4 +67,43 @@ Types.IMEI._displayName=IMEI Code
 Types.ISBN10._displayName=ISBN10 Code
 Types.ISBN13._displayName=ISBN13 Code
 Types.FREETEXT._displayName=Free Text
+Types.CURRENCYCODE._displayName=Currency Code
+Types.CURRENCYNAME._displayName=Currency Name
+Types.CELLPHONE._displayName=Cell phone number
+Types.PHONENUMBER._displayName=Phone number (ext)
+Types.FULLADDRESS._displayName=Full Address
+Types.STATE._displayName=State
+Types.STATEABBR._displayName=State Abbrevition
+Types.UUID._displayName=UUID
+Types.RANDOMWITHINLIST._displayName=Random Within List
 
+TimeZones.DEFAULT._displayName=System Default
+TimeZones.GMTM12._displayName=(GMT -12:00) Eniwetok, Kwajalein
+TimeZones.GMTM11._displayName=(GMT -11:00) Midway Island, Samoa
+TimeZones.GMTM10._displayName=(GMT -10:00) Hawaii
+TimeZones.GMTM09._displayName=(GMT -9:00) Alaska
+TimeZones.GMTM08._displayName=(GMT -8:00) Pacific Time (US & Canada)
+TimeZones.GMTM07._displayName=(GMT -7:00) Mountain Time (US & Canada)
+TimeZones.GMTM06._displayName=(GMT -6:00) Central Time (US & Canada), Mexico City
+TimeZones.GMTM05._displayName=(GMT -5:00) Eastern Time (US & Canada), Bogota, Lima
+TimeZones.GMTM04._displayName=(GMT -4:00) Atlantic Time (Canada), Caracas, La Paz
+TimeZones.GMTM03._displayName=(GMT -3:00) Brazil, Buenos Aires, Georgetown
+TimeZones.GMTM02._displayName=(GMT -2:00) Mid-Atlantic
+TimeZones.GMTM01._displayName=(GMT -1:00) Azores, Cape Verde Islands
+TimeZones.GMTP00._displayName=(GMT) Western Europe Time, London, Lisbon, Casablanca
+TimeZones.GMTP01._displayName=(GMT +1:00) Brussels, Copenhagen, Madrid, Paris
+TimeZones.GMTP02._displayName=(GMT +2:00) Kaliningrad, South Africa
+TimeZones.GMTP03._displayName=(GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg
+TimeZones.GMTP35._displayName=(GMT +3:30) Tehran
+TimeZones.GMTP04._displayName=(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi
+TimeZones.GMTP45._displayName=(GMT +4:30) Kabul
+TimeZones.GMTP05._displayName=(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent
+TimeZones.GMTP55._displayName=(GMT +5:30) Bombay, Calcutta, Madras, New Delhi
+TimeZones.GMTP06._displayName=(GMT +6:00) Almaty, Dhaka, Colombo
+TimeZones.GMTP07._displayName=(GMT +7:00) Bangkok, Hanoi, Jakarta
+TimeZones.GMTP08._displayName=(GMT +8:00) Beijing, Perth, Singapore, Hong Kong
+TimeZones.GMTP09._displayName=(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk
+TimeZones.GMTP95._displayName=(GMT +9:30) Adelaide, Darwin"
+TimeZones.GMTP10._displayName=(GMT +10:00) Eastern Australia, Guam, Vladivostok
+TimeZones.GMTP11._displayName=(GMT +11:00) Magadan, Solomon Islands, New Caledonia
+TimeZones.GMTP12._displayName=(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka
