Update Icon SVG

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -6,7 +6,7 @@ DataGenerator.actions.suggestions.FIELDS._displayName = FIELDS
 DataGenerator.actions.suggestions.TYPES._displayName = TYPES
 DataGeneratorDataset.rows._displayName = Rows
 FieldConfiguration.name._displayName = Name
-FieldConfiguration.name._placeHolder = Name given to the field
+FieldConfiguration.name._placeHolder = Name of the field
 FieldConfiguration.type._displayName = Type
 FieldConfiguration.type._placeHolder = Select a field type
 FieldConfiguration.regex._displayName = From Regex
