Add random rows number feature

--- a/src/main/resources/com/datagenerator/talend/components/source/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/source/Messages.properties
@@ -7,3 +7,6 @@ DataGeneratorInputConfiguration.dataset._displayName = Dataset
 DataGeneratorInputConfiguration.delay._displayName = Delay
 DataGeneratorInputConfiguration.pseudoStreaming._displayName = Pseudo Streaming
 DataGeneratorInputConfiguration.subset._displayName = Subset
+DataGeneratorInputConfiguration.maximumRows._displayName = Maximum rows number
+DataGeneratorInputConfiguration.minimumRows._displayName = Minimum rows number
+DataGeneratorInputConfiguration.randomRows._displayName = Random rows number
