Add blank filed

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -5,27 +5,56 @@ DataGeneratorDataset.fields._displayName = Fields
 DataGenerator.actions.suggestions.FIELDS._displayName = FIELDS
 DataGenerator.actions.suggestions.TYPES._displayName = TYPES
 DataGeneratorDataset.rows._displayName = Rows
+
 FieldConfiguration.name._displayName = Name
-FieldConfiguration.name._placeHolder = Name of the field
+FieldConfiguration.name._placeholder = Name
+
 FieldConfiguration.type._displayName = Type
-FieldConfiguration.type._placeHolder = Select a field type
+FieldConfiguration.type._placeholder = Select a field type
+
+FieldConfiguration.blank._displayName = Blank
+FieldConfiguration.blank._placeholder = 0
+
 FieldConfiguration.regex._displayName = From Regex
 FieldConfiguration.regex._placeholder  = Regex pattern to generate data
 FieldConfiguration.code._displayName = Code
 FieldConfiguration.length._displayName = Length
+
+
 DataGeneratorDataset.locales._displayName = Locales
+DataGeneratorDataset.locales._placeholder = en-us
+
 DataGeneratorDataset.customLocale._displayName = Custom Locales
+DataGeneratorDataset.customLocale._placeholder = en-us
+
 FieldConfiguration.max._displayName = Max
 FieldConfiguration.min._displayName = Min
+
 DataGeneratorDataset.zoneid._displayName = Date Zone
+
 FieldConfiguration.endTime._displayName = To
+FieldConfiguration.endTime._placeholder = 12/31/2021
+
 FieldConfiguration.startTime._displayName = From
+FieldConfiguration.startTime._placeholder = 01/01/2021
+
 FieldConfiguration.increment._displayName = Increment
 FieldConfiguration.freetext._displayName = Free text
+FieldConfiguration.freetext._placeholder = Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
 DataGeneratorDataset.customSeed._displayName = Custom Seed
 DataGeneratorDataset.seed._displayName = Seed
 DataGeneratorInputConfiguration.dataset._displayName = Dataset
+
 DataGeneratorDataset.zone._displayName = Time Zone
+DataGeneratorDataset.zone._placeholder = Default
+
 ListConfiguration.item._displayName = Element
+ListConfiguration.item._placeholder = Element
+
 ListConfiguration.weight._displayName = Weight
+
 FieldConfiguration.randomwithinlist._displayName = Elements
+
+configuration.dataset.locales[${index}]._displayName = The name
+configuration.dataset.locales[${index}]._placeholder = The placeholder
