--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -9,7 +9,7 @@ Types.AGE._displayName=Age
 Types.EMAIL._displayName=Email
 Types.USERNAME._displayName=Username
 Types.PASSWORD._displayName=Password
-Types.SEX._displayName=Gender
+Types.GENDER._displayName=Gender
 Types.DATEOFBIRTH._displayName=Date of birth
 Types.TELEPHONENUMBER._displayName=Telephone Number
 Types.NATIONALITY._displayName=Nationality
