--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -12,7 +12,7 @@ FieldConfiguration.name._placeholder = Name
 FieldConfiguration.type._displayName = Type
 FieldConfiguration.type._placeholder = Select a field type
 
-FieldConfiguration.blank._displayName = Blank
+FieldConfiguration.blank._displayName = Blank %
 FieldConfiguration.blank._placeholder = 0
 
 FieldConfiguration.regex._displayName = From Regex
