Try to fix date issue

--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -103,7 +103,7 @@ TimeZones.GMTP06._displayName=(GMT +6:00) Almaty, Dhaka, Colombo
 TimeZones.GMTP07._displayName=(GMT +7:00) Bangkok, Hanoi, Jakarta
 TimeZones.GMTP08._displayName=(GMT +8:00) Beijing, Perth, Singapore, Hong Kong
 TimeZones.GMTP09._displayName=(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk
-TimeZones.GMTP95._displayName=(GMT +9:30) Adelaide, Darwin"
+TimeZones.GMTP95._displayName=(GMT +9:30) Adelaide, Darwin
 TimeZones.GMTP10._displayName=(GMT +10:00) Eastern Australia, Guam, Vladivostok
 TimeZones.GMTP11._displayName=(GMT +11:00) Magadan, Solomon Islands, New Caledonia
 TimeZones.GMTP12._displayName=(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka
