Fix a few time zones

--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -42,7 +42,7 @@ FieldConfiguration.increment._displayName = Increment
 FieldConfiguration.freetext._displayName = Free text
 FieldConfiguration.freetext._placeholder = Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
-DataGeneratorDataset.customSeed._displayName = Custom Seed
+DataGeneratorDataset.customSeed._displayName = Custom Seed (only for supported types)
 DataGeneratorDataset.seed._displayName = Seed
 DataGeneratorInputConfiguration.dataset._displayName = Dataset
 
