Fix infinite loop

--- a/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/service/Messages.properties
@@ -20,7 +20,8 @@ Types.CUSTOM._displayName=Custom based on Regex
 Types.CARDNUMBER._displayName=Card Number
 Types.EXPIRYDATE._displayName=Card Expiry Date
 Types.RANDOMINTBETWEEN._displayName=Random Number Between
-Types.RANDOMINT._displayName=Random Number
+Types.RANDOMINT._displayName=Random Integer
+Types.RANDOMLONG._displayName=Random Long
 Types.INCREMENTALINT._displayName=Incremental Number
 Types.RANDOMSTRING._displayName=Random String
 Types.VENDOR._displayName=Card Vendor
