--- a/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
+++ b/src/main/resources/com/datagenerator/talend/components/dataset/Messages.properties
@@ -46,6 +46,8 @@ DataGeneratorDataset.customSeed._displayName = Custom Seed (only for supported t
 DataGeneratorDataset.seed._displayName = Seed
 DataGeneratorInputConfiguration.dataset._displayName = Dataset
 
+DataGeneratorDataset.enableBlank._displayName = Enable Blank %
+
 DataGeneratorDataset.zone._displayName = Time Zone
 DataGeneratorDataset.zone._placeholder = Default
 
